--- a/Project/Amazon.css
+++ b/Project/Amazon.css
@@ -34,10 +34,15 @@
     font-size:14px ;
     margin-top:-16px ;
     
-}.img{
-    height:500px ;
-    width:450px ;
-    
+}.img {
+    height: 500px;
+    width: 450px;
+    cursor: pointer;
+   
+}
+.img:hover {
+    transition:  0.3s; 
+    transform: scale(0.9);
 }
 .img1{
     height:17px ;
@@ -104,13 +109,19 @@
     margin-top:-1px ;
     margin-left:-6px ;
 }
-.colorbtn{
-    height:44px ;
-    width:44px ;
-    margin-left:6px ;
- 
-    
-}
+.color-button {
+    width: 40px;
+    height: 40px;
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+    margin-left:5px;
+  }
+  
+  .color-button:hover {
+    transition:  0.2s;
+    transform: scale(1.1);
+  }
 .displaycolors{
     display:flex;
 }
@@ -289,4 +300,8 @@ height:600px ;
 }
 .emi{
     opacity:0.6 ;
+}
+
+.delete{
+    height:13px ;
 }
