--- a/Project/Amazon.css
+++ b/Project/Amazon.css
@@ -1,46 +1,51 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 .display{
     display:flex;
+    margin-top:45px ;
 }
-.mobileimg{
-    height:70px ;
-    width:60px ;
-    border:2px solid rgb(187, 164, 164);
-    border-radius:10% ;
-
+.mobile-img{
+    height:50px ;
+    width:50px ;
+    border:1px solid rgb(187, 164, 164);
+    border-radius:5% ;
+    display:flex ;
 }
-.mobilesimgline{
- height:500px ;
- width:100px ;
- margin-top:35px ;
- 
+*{
+    font-family: "Poppins", sans-serif;
 }
-
-.box{
-    height:450px;
+.product-name{
+    font-size:22px ;
+    line-height:32px ;
+}
+.content-box{
+    height:400px;
     width:260px ;
    margin-top:20px ;
-    border:1.5px solid black ;
+    border:0.3px solid black ;
     border-radius:3% ;
 }
 
-.font{
+.root-to-store{
     font-size:14px ;
-    margin-top:-20px ;
-    color: rgb(22, 202, 142);
+    color:#007185;
+   
 }
-.font1{
+.rating-chart{
     font-size:14px ;
-    margin-top:-16px ;
     
-}.img {
+}
+body{
+    font-size:14px ;
+    line-height:20px ;
+}
+.product-img {
     height: 500px;
     width: 450px;
     cursor: pointer;
    
 }
-.img:hover {
+.product-img:hover {
     transition:  0.3s; 
     transform: scale(0.9);
 }
@@ -49,76 +54,88 @@
     width:70px ;
     background-color:white ; 
 }
-.pricesize{
-    font-size:26px ;
-    margin-top:-5px ;
-    font-weight: 800;
+.product-price{
+    font-size:24px ;
+    font-weight: 500;
 }
-.choice{
+.customer-choice{
     height: 35px;
-    width:100px ; margin-top:-10px ;
+    width:100px ; 
 }
-.font2{
+.custemers-buying-product{
     font-size:12px ;
-    opacity:0.6 ; margin-top:-8px ;
+    opacity:0.6 ;  ;
 }
-.font3{
-    font-size:14px ;
-
+.product-strike-price{
+    font-size:11px ;
     opacity:0.6 ;
-    margin-top: -21px;
+}
+.product-taxes{
+opacity:0.7 ;
 
 }
-.font4{
-    margin-top:-10px ;
-    font-size:15px ;
+.product-offer{
+    font-weight: 550; 
+    font-size:13px ;
 }
-.font5{
-    font-weight: 560;
-    margin-top:-5px ;
-  
-    
+.product-bankoffer{
+    font-weight: 550; 
+    font-size:13px ; 
 }
-.offersbox1{
-    height:110px;
+.product-discount{
+    font-size:12.5px ;
+    text-align: center;
+}
+.offer-button{
+   margin-top:20px ;
+}
+.offers-box{
+    height:130px;
     width:140px ;
-    margin-top:20px ;
-    border:1.5px solid black ;
     margin-left:5px ;
     border-radius:4px ;
+    box-shadow: 2px 2px 8px 2px rgba(0, 0, 0, 0.2);
+    text-align: center;
 }
-.offerdisplay{
+
+.offer-boxes-display{
     display: flex;
-    margin-top:-20px ;
 } 
-.font5{
-    font-size:12.3px ;
-    font-weight: 360;margin-left: 3px;
-    margin-right:3px ;
-    opacity: 0.6;
-}
-.transportation{
+
+.product-transpotation{
     display: flex;
-    color:rgb(103, 201, 236)
+    color:rgb(80, 100, 107);
+    font-size:11px;
+    justify-content: space-around;
 }
-.mobilecolor{
-    height:40px ;
-    width:40px ;
+.product-colour-name{
+    opacity:0.6 ;
+    margin-top:40px ;
+}
+.mobile-color{
+    height:35px ;
+    width:35px ;
    border-radius:50% ;
-    border:1px solid black;
-    margin-top:-1px ;
-    margin-left:-6px ;
+    border:1px solid black; 
 }
-.color-button {
-    width: 40px;
-    height: 40px;
+.product-contentbox{
+    box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.2);
+    height:325px ;
+    border-radius:5% ;
+}
+.contentbox-space{
+    margin-left:5px ;
+}
+.button-color {
+    width: 35px;
+    height: 35px;
     border: none;
-    border-radius: 50%;
     cursor: pointer;
-    margin-left:5px;
+   opacity:0.7 ;
+   margin-left:5px ;
   }
   
-  .color-button:hover {
+  .button-color:hover {
     transition:  0.2s;
     transform: scale(1.1);
   }
@@ -128,70 +145,83 @@
 .displaysize{
     display:flex;
 }
-.buttonsize{
-    height: 40px;
-    width:80px ;
-    margin-left:15px ;
+.button-size{
+    box-shadow: 3px 3px 2px 2px rgba(0, 0, 0, 0.2);
+    height: 30px;
+    width:70px ;
+    margin-left:15px;
     border-radius:8% ;
 }
-.contentbox{
-    height:800px ;
-    width: 460px;
+.product-features{
+margin-top: 15px;
+}
+.brand-space{
+    margin-left:60px ;
+}
+.brand-bold{
+    font-weight: 600;
+    font-size:13px ; 
+}
+.content-box{
+    height:320px ;
+    width: 280px;
+}
+.product-mainprice{
+    font-size:11px ;
+    margin-top:-5px ;
 }
 .contentfont{
     font-size: 14px ;
 }
-.font6{
-    font-size:14px ;
-    font-weight: 760;
-    margin-top: -16px;
+.product-withexchange{
     color: rgb(217, 42, 42);
 }
 .checkbox{
-    margin-left:130px ;
+   margin-left:120px ;
      margin-top:10px ;
 }
 .bgcolor{
     background-color:lightgray;
     height:68px ;
-    width:259.5px ;
-    margin-top:-21.8px ;
-    border-radius:9px;
-    margin-left:-15px ;
+    width:256.5px ;
+    border-radius:9px; 
 }
 .pricecolor{
     color:black ;
     opacity:0.6 ;
 }
-.fontcolor{
+.stock-fontcolor{
     color:rgb(30, 194, 30);
-    font-size:20px ;
-}
-.font7{
-    font-size:12px ;
-    margin-top:-300px ;
-}
-.textleft{
-    margin-left: 15px;
+    font-size:18px ;
 }
 .checkbox1{
-   margin-left:95px ;
+   margin-left:100px ;
 }
-.button1{
+.shipment{
+    font-size:11px ;
+    opacity:0.7 ;
+}
+.websitename{
+    margin-left:40px ;
+    font-size:11px ;
+}
+.addtocart-button{
     height:40px ;
     width:230px ;
  border-radius:7% ;
  margin-top:15px ;
+ margin-left:13px ;
  background-color: #FFDD00 ;
 }
-.button2{
+.buynow-button{
     height:40px ;
     width:230px ;
  border-radius:7% ;
  margin-top:5px ;
+ margin-left:13px ;
  background-color:  #FFA500;
 }
-.deliveryimg{
+.product-delivery-img{
     height: 34px;
     width:34px ;
     margin-left:15px ;
@@ -199,24 +229,22 @@
 .storeimage1{
 height:600px ;
 }
-.headline{
-    margin-left: 700px;
-    margin-top: -50px;
-    color: rgb(71, 159, 130);
-}
 .heading{
     color: rgb(71, 159, 130);  
+}
+.exchange{
+    font-weight: 500;
+  
 }
 .storeimage2{
     height:600px ;
     margin-top:50px ;
     }
     .imagetop{
-        margin-top:-450px ;
         width:1320px ;
     }
     .imagetop1{
-      margin-top:-5px ;
+      margin-top:-6px ;
         width:1320px ;
     }
     .deleteimg{
@@ -226,82 +254,36 @@ height:600px ;
     }
     .mainpageimg{
         height:300px;
-        margin-top:-15px ;
+       
     }
     .mainpage{
         height:300px ;
         width:1340px ;
-       
        display: flex;
+       margin-top:30px ;
     }
     .primeimg{
-        height:16px;
-        margin-top:-22px ;
+        height:20px;
+        
     }
-.mainpagebutton{
-    height:23px ;
-    width:90px ;
-    border-radius:10% ;
-    margin-left:10px ;
-    background-color: #FFDD00 ;
-}
-.pricesize1{
-    font-size:26px ;
-    margin-top:-12px ;
-    font-weight: 800;
-}
-.mainpagespace4{
-    margin-top:-8px ;
-    font-size: 14px;
-    opacity:0.6;
-}
-.mainpagedeliveryfont{
-    margin-top:-1px ;
-    font-size: 15px;
-    opacity:0.6 ;
-}
-.mainpagedeliveryfont1{
-    margin-top:-10px ;
-    opacity:0.6;
-}
+
+
 .displaytopimg{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 20px;
 }
-.top{
-    margin-top:-8px ;
-    margin-left:6px ;
-}
-.font10{
-    font-size:12px ;
-    margin-top:-10px ;
-}
+
 .orderedimg{
     height:40px ;
     width:50px ;
 }
-.slide{
-    color: red;
-    background-color: aqua;
-    height:40px ;
-    width: 30px;
-}
-.margin{
-   opacity:0.6 ;
-}
-.bankbutton{
-    margin-left:1300px ;
-}
-.font11{
-    margin-top:14px ;
-}
-.bank{
-    height:16px ;
-}
-.emi{
-    opacity:0.6 ;
-}
-
 .delete{
     height:13px ;
+}
+.text-top{
+    font-size:11px ;
+  margin-left:10px ;
+  color: rgb(87, 179, 148);
 }
