--- a/E-mart demo project/E-mart/src/App.css
+++ b/E-mart demo project/E-mart/src/App.css
@@ -5,6 +5,7 @@
     margin:0px;
     padding: 0px;
  box-sizing:border-box ;
+
  font-family: "Roboto Slab", serif;
 }
 body{
@@ -14,9 +15,8 @@ body{
 .navsection{
    display: flex;
      justify-content:space-between;
-     align-items: 'center';
-      padding: '10px';margin-top:10px ;
-       background-color: '#f8f8f8' ;
+      padding: 10px;
+       background-color: #f8f8f8 ;
 }
 .prosetion{
    display: flex;
@@ -43,7 +43,7 @@ body{
 }
 .submenu ul{
     display: flex;
-    justify-content:space-evenly 
+    justify-content:space-evenly; 
 }
 .submenu ul li{
     list-style: none;
